Change padding, still need to fix styles Clear Completed button on mobile

--- a/app/containers/Main/styles.css
+++ b/app/containers/Main/styles.css
@@ -6,7 +6,7 @@
 }
 
 .footerButton, .buttonBorder {
-  padding: .2em 1em;
+  padding: .2em .5em;
 }
 
 .footerButton:hover {
